--- a/huddle-landing-page-with-single-introductory-section/index.html
+++ b/huddle-landing-page-with-single-introductory-section/index.html
@@ -33,20 +33,21 @@
           </p>
         </article>
         <div class="btn-register">
-          <button>Register</button>
+          <button class="hover">Register</button>
         </div>
       </section>
     </main>
     <footer>
-      <a href="#">
+      <a href="#" class="hover">
         <i class="fab fa-facebook-f"></i>
       </a>
-      <a href="#">
+      <a href="#" class="hover">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="#">
+      <a href="#" class="hover">
         <i class="fab fa-instagram"></i>
       </a>
     </footer>
+    <script src="./js/main.js"></script>
   </body>
 </html>
