--- a/ecommerce-product-page/index.html
+++ b/ecommerce-product-page/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
 
   <title>Frontend Mentor | E-commerce product page</title>
 </head>
@@ -14,23 +14,41 @@
 <body>
 
   <nav>
-    <ul>
-      <li>
-        Collections
-      </li>
-      <li>
-        Men
-      </li>
-      <li>
-        Women
-      </li>
-      <li>
-        About
-      </li>
-      <li>
-        Contact
-      </li>
-    </ul>
+    <div>
+      <button aria-label="Close menu">X</button>
+      <div><img src="./assets/images/logo.svg" alt="logo"></div>
+      <ul>
+        <li>
+          <a href="#">
+            Collections
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Men
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Women
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            About
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Contact
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <img src="./assets/images/icon-cart.svg" alt="cart">
+      <img src="./assets/images/image-avatar.png" alt="avatar">
+    </div>
   </nav>
 
 
