--- a/ecommerce-product-page/index.html
+++ b/ecommerce-product-page/index.html
@@ -63,61 +63,82 @@
     </nav>
   </header>
 
-  <!-- Swiper -->
+  <section class="card-container">
+    <article class="card">
+      <div class="card-header">
+        <!-- Swiper -->
 
-  <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper2">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <img src="./assets/images/image-product-1.jpg" />
+        <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper2">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="./assets/images/image-product-1.jpg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/images/image-product-2.jpg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/images/image-product-3.jpg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/images/image-product-4.jpg" />
+            </div>
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+        </div>
+        <div thumbsSlider="" class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="./assets/images/image-product-1-thumbnail.jpg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/images/image-product-2-thumbnail.jpg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/images/image-product-3-thumbnail.jpg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/images/image-product-4-thumbnail.jpg" />
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="swiper-slide">
-        <img src="./assets/images/image-product-2.jpg" />
+      <div class="card-body">
+        <p class="company">
+          Sneaker Company
+        </p>
+        <h1 class="product-name">
+          Fall Limited Edition Sneakers
+        </h1>
+        <p class="description">
+          These low-profile sneakers are your perfect casual wear companion. Featuring a
+          durable rubber outer sole, they’ll withstand everything the weather can offer.
+        </p>
+        <div class="price">
+          <div>
+            <p class="discount">$125.00</p>
+            <p class="percentage">50%</p>
+          </div>
+          <p class="original">$250.00</p>
+        </div>
       </div>
-      <div class="swiper-slide">
-        <img src="./assets/images/image-product-3.jpg" />
-      </div>
-      <div class="swiper-slide">
-        <img src="./assets/images/image-product-4.jpg" />
-      </div>
-    </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-  </div>
-  <div thumbsSlider="" class="swiper mySwiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <img src="./assets/images/image-product-1-thumbnail.jpg" />
-      </div>
-      <div class="swiper-slide">
-        <img src="./assets/images/image-product-2-thumbnail.jpg" />
-      </div>
-      <div class="swiper-slide">
-        <img src="./assets/images/image-product-3-thumbnail.jpg" />
-      </div>
-      <div class="swiper-slide">
-        <img src="./assets/images/image-product-4-thumbnail.jpg" />
-      </div>
-    </div>
-  </div>
 
-  Sneaker Company
+      <div class="card-footer">
+        <div class="quantity card-button">
+          <button> <img src="./assets/images/icon-minus.svg" alt="icon-minus"></button>
+          <p>0</p>
+          <button> <img src="./assets/images/icon-plus.svg" alt="icon-plus"></button>
+        </div>
+        <div class="add-to-cart card-button">
+          <button>
+            <img src="./assets/images/icon-cart.svg" alt="icon-cart">
+            Add to cart
+          </button>
+        </div>
 
-  Fall Limited Edition Sneakers
-
-  These low-profile sneakers are your perfect casual wear companion. Featuring a
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      </div>
+    </article>
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="./assets/js/main.js"></script>
